welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:10: error: not found: value marquer
	marquer();
        ^PatternPicture:14: error: not found: value marquer
	marquer();
        ^PatternPicture:20: error: not found: value faireMotif
faireMotif();
^